#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

+ confirmation when quitting Emacs

*** Installer

+ new =with_default_config= helper for installing a program
  with the default configuration

+ support for =version current= command with Arch Linux
  configuration

*** Xmobar

+ battery percentage will now display in red if it drops to
  30%

+ initial display for wireless network connection

+ memory usage will now display in red if it hits 90%

** Changed

*** Xmobar

+ CPU display now refreshes every 5 seconds instead of every 1

+ now only shows hours and minutes in time

+ now uses Inconsolata font

** Fixed

+ xmobar not spawning when starting xmonad

* 0.9.0 - 2019-06-05

** Added

+ =git-clone-my= command for cloning personal repositories

*** Emacs

**** Org

+ automatic sorting of tags in Org by lexicographic ordering

+ =Inbox= capture now includes a =CREATED= property

+ support for refiling to any heading (in specific agenda
  files) that has a =category= tag

***** Agenda

+ agenda configuration for specific project types
  + short term projects
  + simple projects list

+ agenda view for weekly agenda

+ agenda views for specific types of next action
  + batch tasks
  + project actions
  + standalone (no project) actions

+ =org-super-agenda= configuration for next actions

*** Installer

+ install configuration for Common Lisp development

*** XMonad

+ new workspace bindings
  + =M-S-h= :: previous workspace
  + =M-S-l= :: next workspace
  + =M-[= :: shift current window to previous workspace, and
             switch to that workspace
  + =M-]= :: shift current window to next workspace, and
             switch to that workspace

+ new workspace configuration
  + =main=, =terminal=, =web=, and =other= workspaces

+ new tile layout configurations
  + tiled, mirror tiled, full

** Changed

*** Emacs

+ calendar sync warnings now include a timestamp
